// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block contact lambda sets the blocked boolean after a user has been blocked 1`] = `
{
  "body": "{"email":"test@example.com","id":"1234","blocked":true}",
  "headers": {
    "Access-Control-Allow-Origin": undefined,
  },
  "statusCode": 200,
}
`;

exports[`Block contact lambda should handle contact not found 1`] = `
{
  "body": ""contact not found"",
  "headers": {
    "Access-Control-Allow-Origin": undefined,
  },
  "statusCode": 404,
}
`;

exports[`Block contact lambda should handle invalid request body 1`] = `
{
  "body": ""invalid request body"",
  "headers": {
    "Access-Control-Allow-Origin": undefined,
  },
  "statusCode": 400,
}
`;
